tests-integration/tests/roundtrip/invalid/syntax/multiple/01/via-conjure.expected-error.txt
Error:
    tests-integration/tests/roundtrip/invalid/syntax/multiple/01/input.essence:1:1:
  |
1 | language ESSENCE' 1.0
  | ^^^^^^^^^^^^^^^^^^^^^
Warning: Essence prime file detected, type checking is off

tests-integration/tests/roundtrip/invalid/syntax/multiple/01/input.essence:10:54:
   |
10 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of int(0..undefined(division by zero: 3 / 0 : `int`))
   |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Skipped tokens

tests-integration/tests/roundtrip/invalid/syntax/multiple/01/input.essence:10:54:
   |
10 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of int(0..undefined(division by zero: 3 / 0 : `int`))
   |                                                      ^
Missing Domain

tests-integration/tests/roundtrip/invalid/syntax/multiple/01/input.essence:10:54:
   |
10 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of int(0..undefined(division by zero: 3 / 0 : `int`))
   |                                                      ^
Missing )

tests-integration/tests/roundtrip/invalid/syntax/multiple/01/input.essence:10:54:
   |
10 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of int(0..undefined(division by zero: 3 / 0 : `int`))
   |                                                      ^
Missing ]

tests-integration/tests/roundtrip/invalid/syntax/multiple/01/input.essence:10:54:
   |
10 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of int(0..undefined(division by zero: 3 / 0 : `int`))
   |                                                      ^
Missing of

tests-integration/tests/roundtrip/invalid/syntax/multiple/01/input.essence:12:54:
   |
12 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of bool
   |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Skipped tokens

tests-integration/tests/roundtrip/invalid/syntax/multiple/01/input.essence:12:54:
   |
12 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of bool
   |                                                      ^
Missing Domain

tests-integration/tests/roundtrip/invalid/syntax/multiple/01/input.essence:12:54:
   |
12 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of bool
   |                                                      ^
Missing )

tests-integration/tests/roundtrip/invalid/syntax/multiple/01/input.essence:12:54:
   |
12 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of bool
   |                                                      ^
Missing ]

tests-integration/tests/roundtrip/invalid/syntax/multiple/01/input.essence:12:54:
   |
12 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of bool
   |                                                      ^
Missing of